--- a/index.html
+++ b/index.html
@@ -144,6 +144,74 @@
 <div class="arrow">
 	
 </div>
+<div class="basic">
+<div class="basic1"> 
+<h1>Tech skills. Basic</h1>
+<h3>Что такое Frontend/backend. Основы Html/css</h3>
+<ul>
+  <li>Что такое фронтенд/бекенд. Из чего состоит веб-страничка:
+ <a href="https://youtu.be/-DeOIitAhHY
+"></a></li>
+<li>Текстовые редакторы <a href="https://youtu.be/T8ZCmfDm6-I
+"></a></li>
+<li>Основные теги и атрибуты <a href="HTML. Основные теги и атрибуты. Part 1"> </a>  </li>
+<li>Основные теги и атрибуты 1 <a href="</a> <a href="https://youtu.be/h7-LeW4nfRg"></a>"></a></li>
+<li>Основные теги <a href="<a href="https://youtu.be/oh_FbUQjLGQ"></a>"></a> </li>
+</ul>
+</div>
+<div class="basic2">
+<h3>VSC.GIT.Работа с проетом</h3>
+<ul>
+  <li>Понятие VCS <a href="https://youtu.be/C5PLSwb4iRw"></a></li>
+  <li>Основные команды Git <a href="https://youtu.be/OWp2Rb_c6hY"></a></li>
+  <li>Создание удалённого репозитория <a href="https://youtu.be/At_m16C1cMQ
+"></a></li> 
+<li>Работа с ветками
+<a href="https://youtu.be/sfWSEtsPbWA"></a></li>
+<li>Структура проекта<a href="https://youtu.be/_K5_E5gbAAc
+"></a></li>
+</ul>
+
+  
+</div>
+<div class="basic3">
+<h3>Основы CSS. Методы подключения. Селекторы</h3>
+<ul>
+  <li>Основы CSS <a href="https://youtu.be/GoOaZaBVZws"></a></li>
+  <li>Методы подключения <a href="https://youtu.be/LgwLM0XwmIA
+"></a></li>
+  <li>Селекторы <a href="https://youtu.be/jsYKybaItxM"></a></li>
+  <li>Единицы измерения <a href="https://youtu.be/wPWgSiOZ1wo"></a></li>
+  <li>Домашнее задание <a href="
+             https://github.com/goit-fe/markup_fe2o/tree/master/html_01
+"></a></li>
+</ul>
+  
+</div>
+<div class="fotoshop">
+ <h3>fotoshop  и верстка</h3>
+ <ul>
+   <li>Photoshop для верстальщика <a href="https://youtu.be/GXl91tw2pyc
+"></a></li>
+   <li>Обнуление стилей <a href="https://youtu.be/5F_aRb8djrM"></a></li>
+   <li>Блочная модель <a href="https://youtu.be/H_BlZ3G-Pww"></a></li>
+   <li>Блочные и строчные элементы <a href="https://youtu.be/rAhfhClSh-M
+"></a></li>
+ </ul>
+  
+</div>
+<div class="js_kyrs">
+<h3>Основы JS</h3>
+<ul>
+  <li>Вступление в JS <a href="https://youtu.be/MAidxQ63kM8"></a></li>
+  <li>Переменные, типы данных <a href="https://youtu.be/INYcos-kM1c
+"></a></li>
+</ul>
+
+  
+</div>
+  
+</div>
 </div>
 	
 </body>
